--- a/src/stylesheets/fonts.css
+++ b/src/stylesheets/fonts.css
@@ -23,9 +23,16 @@
 }
 
 @font-face {
-  font-family: 'PT Root UI';
-  src: url('../fonts/PT-Root-UI_Bold.woff2') format('woff2'),
-    url('../fonts/PT-Root-UI_Bold.woff') format('woff');
-  font-weight: 700;
+  font-family: 'Aeonik Pro';
+  src: url('../fonts/AeonikPro-Regular.otf') format('otf'),
+    url('../fonts/AeonikPro-Regular.otf') format('otf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Aeonik Pro';
+  src: url('../fonts/AeonikPro-Medium.otf') format('otf'),
+    url('../fonts/AeonikPro-Medium.otf') format('otf');
+  font-weight: 500;
   font-style: normal;
 }
