--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -23,3 +23,57 @@
     }
   }
 }
+.W_HeadingContainer {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-24);
+  color: var(--gray-soft);
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  max-width: 846px;
+  height: fit-content;
+  padding: var(--space-16) var(--space-24);
+}
+.W_AboutCards {
+  padding: 0 var(--container-padding);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: var(--space-20);
+
+  .O_AboutCard {
+    flex: 0.5;
+    max-width: 413px;
+  }
+
+  .W_TwoCards {
+    flex: 1;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    gap: var(--space-20);
+
+    .O_AboutCard {
+      flex: 1 100%;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    flex-direction: column;
+
+    .O_AboutCard {
+      max-width: 100%;
+    }
+
+    .W_TwoCards {
+      flex-direction: column;
+      min-width: 100%;
+    }
+  }
+}
+.W_SectionAboutInfo {
+  display: flex;
+  justify-content: space-between;
+}
