--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
 }
 
+button,
 a.A_Button {
   display: block;
   display: flex;
@@ -14,9 +15,10 @@ a.A_Button {
   align-items: center;
   height: 48px;
   padding: var(--space-8) var(--space-24);
-  background-color: var(--gray-base);
+  background: linear-gradient(0deg, #151514 70.7%, #5d5d5c 110.42%);
   color: var(--white-500);
   border-radius: 4px;
+  border: 1px solid var(--gray-lightest);
   text-decoration: none;
   font-weight: 500;
 
@@ -24,6 +26,10 @@ a.A_Button {
     background-color: transparent;
     border: 2px solid var(--gray-base);
     color: var(--gray-base);
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 .A_IconText {
@@ -49,5 +55,36 @@ a.A_Button {
   border-left: 1.5px dashed var(--gray-base);
   p {
     color: var(--gray-soft);
+  }
+}
+.A_Poster {
+  width: calc(26% - var(--grid-gap));
+  border-radius: 2px;
+  overflow: hidden;
+  /* position: relative; */
+
+  a {
+    /* background: #000; */
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+/* PosterPage */
+.A_PosterCover {
+  width: 100%;
+  aspect-ratio: 443 / 628;
+  grid-column: 4/8;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
