--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -36,3 +36,16 @@
   display: flex;
   gap: var(--space-8);
 }
+
+/* PosterPage */
+.M_MetaDataRow {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  gap: var(--space-20);
+
+  p {
+    flex: 1;
+  }
+}
