--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -45,3 +45,12 @@ header.O_Header {
   flex-direction: column;
   gap: var(--space-20);
 }
+/* PosterPage */
+.O_PosterInfo {
+  width: 100%;
+  max-width: 413px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-40);
+  grid-column: 9/13;
+}
