--- a/src/stylesheets/vars.css
+++ b/src/stylesheets/vars.css
@@ -57,4 +57,12 @@
 
   /* Gap */
   --container-gap: var(--space-20);
+  /* GridColumns */
+
+  --grid-columns: 12;
+  --grid-gap: var(--space-20);
+  --grid-margin: 80px;
+
+  /* WidthContainer */
+  --width-container: 1440px;
 }
