--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
 }
 
-button,
+button.A_Button,
 a.A_Button {
   display: block;
   display: flex;
@@ -50,6 +50,7 @@ a.A_Button {
 .A_CaptionText {
   display: flex;
   max-width: 410px;
+  height: fit-content;
   position: relative;
   padding: 0 var(--space-12);
   border-left: 1.5px dashed var(--gray-base);
@@ -58,7 +59,7 @@ a.A_Button {
   }
 }
 .A_Poster {
-  width: calc(26% - var(--grid-gap));
+  width: calc(33.95% - var(--grid-gap));
   border-radius: 2px;
   overflow: hidden;
   /* position: relative; */
@@ -87,4 +88,35 @@ a.A_Button {
     height: 100%;
     object-fit: contain;
   }
+
+  @media screen and (max-width: 1024px) {
+    grid-column: 1/5;
+  }
+
+  @media screen and (max-width: 768px) {
+    grid-column: 2/6;
+  }
+  @media screen and (max-width: 528px) {
+    grid-column: -1/1;
+  }
+}
+.A_CategoryFilterHeader {
+  border: none;
+  display: flex;
+  margin-left: -0.6rem;
+  align-items: center;
+  height: 26px;
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: 'Aeonik Pro';
+  &:hover {
+    cursor: pointer;
+  }
+
+  /* img {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+  } */
 }
