--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -1,19 +1,15 @@
-header.O_Header {
+.O_HeaderItems {
   width: 100%;
-  position: relative;
+  max-width: var(--width-container);
+  margin: 0 auto;
+  flex-direction: row;
   background: var(--white-body);
   display: flex;
-  color: var(--gray-darksoft);
+  position: relative;
   justify-content: space-between;
-  border-bottom: 1px solid var(--gray-lightest);
-  padding: var(--space-12) var(--container-padding);
-  background-color: var(--white-500);
-  position: fixed;
-  top: 0;
-  height: 4rem;
   align-items: center;
-  z-index: 100;
 }
+
 .O_AboutCard {
   width: 100%;
   padding: 0 var(--space-16);
@@ -53,4 +49,20 @@ header.O_Header {
   flex-direction: column;
   gap: var(--space-40);
   grid-column: 9/13;
+
+  @media screen and (max-width: 1024px) {
+    grid-column: 6/10;
+  }
+  @media screen and (max-width: 768px) {
+    grid-column: 1/-1;
+  }
+}
+/* Filters */
+.O_CategoryFilter {
+  padding: 0.5rem 0rem;
+  border-bottom: 1px dashed var(--Colors-neutral-gray-lighter, #b8b8b7);
+
+  /* &:nth-child(2) {
+    border-top: 1px dashed var(--Colors-neutral-gray-lighter, #b8b8b7);
+  } */
 }
