--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -81,3 +81,12 @@
 .W_PostersWrap {
   grid-column: 4 / 13;
 }
+
+.W_PostersPage {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-24);
+  width: 100%;
+  max-width: var(--width-container);
+  margin: calc(var(--header-offset) + var(--space-64)) auto;
+}
