--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -6,13 +6,14 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
-
+/* Buttons */
 button.A_Button,
 a.A_Button {
   display: block;
   display: flex;
   width: fit-content;
   align-items: center;
+  justify-content: center;
   height: 48px;
   padding: var(--space-8) var(--space-24);
   background: linear-gradient(0deg, #151514 70.7%, #5d5d5c 110.42%);
@@ -32,6 +33,29 @@ a.A_Button {
     cursor: pointer;
   }
 }
+
+button.A_Tab {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2);
+  border: none;
+  background-color: transparent;
+  height: 4rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: 'Aeonik Pro';
+  position: relative;
+
+  p:last-child {
+    font-size: 1rem;
+    color: var(--gray-light);
+  }
+}
+
+/* --------------------------------- */
 .A_IconText {
   display: flex;
   flex-direction: row;
@@ -49,7 +73,7 @@ a.A_Button {
 /* TextDescription */
 .A_CaptionText {
   display: flex;
-  max-width: 410px;
+  width: 100%;
   height: fit-content;
   position: relative;
   padding: 0 var(--space-12);
@@ -119,4 +143,13 @@ a.A_Button {
     height: 20px;
     background-color: red;
   } */
+}
+
+.A_Tag {
+  font-size: 1rem;
+  padding: var(--space-6) var(--space-8);
+  border: 1px solid var(--gray-base);
+  width: fit-content;
+  border-radius: 4px;
+  user-select: none;
 }
