--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -16,3 +16,17 @@
   flex-direction: column;
   padding-left: 1rem;
 }
+/* Tabs */
+.C_Tabs {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid var(--gray-lightest);
+}
+
+.C_Articles {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: var(--grid-gap);
+  row-gap: var(--space-40);
+}
