--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -23,10 +23,10 @@
   flex-direction: column;
   gap: var(--space-12);
 }
-.M_TimeChapter {
+.M_HeadingContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--space-12);
+  gap: var(--space-8);
 }
 .M_Markers {
   display: flex;
@@ -125,4 +125,31 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-12);
+}
+.M_Columns {
+  width: 100%;
+  height: 3rem;
+  display: grid;
+  grid-template-columns: repeat(var(--grid-columns), 1fr);
+  gap: var(--grid-gap);
+  padding-bottom: var(--space-16);
+  border-bottom: 1px solid var(--gray-lightest);
+
+  p.body-other {
+    margin-top: auto;
+    color: var(--gray-soft);
+
+    &:nth-child(1) {
+      grid-column: span 1;
+    }
+    &:nth-child(2) {
+      grid-column: span 5;
+    }
+    &:nth-child(3) {
+      grid-column: span 2;
+    }
+    &:nth-child(4) {
+      grid-column: span 1;
+    }
+  }
 }
