--- a/src/stylesheets/Components/quarcs.css
+++ b/src/stylesheets/Components/quarcs.css
@@ -21,6 +21,22 @@
     left: -3px;
   }
 }
+
+.Q_HandleLine {
+  width: 1px;
+  height: 24px;
+  background-color: var(--gray-lightest);
+  position: absolute;
+
+  &.lt {
+    top: 0;
+    left: 0;
+  }
+  &.rt {
+    top: 0;
+    right: 0;
+  }
+}
 .Q_SmallPatternImage {
   height: 4rem;
   width: 4rem;
@@ -28,11 +44,28 @@
   border-radius: 0.5rem;
 }
 .Q_Circle {
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 2px solid var(--gray-base);
   display: flex;
   align-items: center;
   justify-content: center;
+
+  p.subtitle {
+    font-size: 1rem;
+  }
+}
+.Q_PageCover {
+  width: 100%;
+  /* height: 410px; */
+  aspect-ratio: 12 / 4;
+  background-color: var(--gray-lightest);
+  border-radius: 4px;
+}
+.Q_ArticleImage {
+  width: 100%;
+  aspect-ratio: 3/2;
+  border: 1px solid var(--gray-lightest);
+  border-radius: 4px;
 }
