--- a/src/stylesheets/basics.css
+++ b/src/stylesheets/basics.css
@@ -34,11 +34,14 @@ h1 {
   font-size: 3.5rem;
   font-weight: 500;
 }
-p.body {
+.body {
   font-size: 1.125rem;
   font-weight: 400;
-
   line-height: 1.5rem;
+
+  &.bold {
+    font-weight: 500;
+  }
 }
 h2 {
   font-size: 2.5rem;
