--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -153,3 +153,32 @@
     }
   }
 }
+.M_ListNavigation {
+  display: flex;
+  min-height: 32px;
+  height: fit-content;
+  flex-direction: column;
+  align-items: center;
+  align-items: flex-start;
+
+  .A_CollapseList {
+    display: flex;
+    gap: var(--space-2);
+    padding-left: var(--space-4);
+    align-items: center;
+    width: 100%;
+    height: 2rem;
+
+    &:hover {
+      background: rgba(212, 212, 212, 0.25);
+      cursor: pointer;
+    }
+  }
+
+  a {
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
