--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -97,10 +97,17 @@ header.S_Header {
 .S_LeftNavBar {
   display: flex;
   flex-direction: column;
+  gap: var(--space-24);
   width: 100%;
   grid-column: span 3;
-  background: red;
   position: sticky;
   top: 100px;
-  align-self: start; /* ← ключевой момент */
+  align-self: start;
+  /* height: calc(100vh - 10rem); */
+  height: calc(100vh - 6.5rem);
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar-track {
+    background-color: red;
+  }
 }
