--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -1,6 +1,5 @@
 .O_HeaderItems {
   width: 100%;
-  max-width: var(--width-container);
   margin: 0 auto;
   flex-direction: row;
   background: var(--white-body);
@@ -45,17 +44,23 @@
 /* PosterPage */
 .O_PosterInfo {
   width: 100%;
-  max-width: 413px;
   display: flex;
   flex-direction: column;
   gap: var(--space-40);
-  grid-column: 9/13;
+  grid-column: 8/12;
 
+  @media screen and (max-width: 1240px) {
+    grid-column: 7/12;
+  }
   @media screen and (max-width: 1024px) {
-    grid-column: 6/10;
+    grid-column: 5/10;
   }
   @media screen and (max-width: 768px) {
-    grid-column: 1/-1;
+    grid-column: -1 / 1;
+  }
+
+  .A_Button {
+    width: 100%;
   }
 }
 /* Filters */
