--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -121,3 +121,10 @@
   flex-direction: column;
   gap: var(--space-16);
 }
+.W_BreadCrumbsContainer {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-8);
+  width: 100%;
+  margin: 0 auto;
+}
