--- a/src/stylesheets/basics.css
+++ b/src/stylesheets/basics.css
@@ -62,7 +62,7 @@ p.body-other {
   font-weight: 400;
   line-height: 21px;
 }
-p.caption-caps {
+.caption-caps {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -98,6 +98,7 @@ p.caption-caps {
   width: 100%;
   max-width: var(--width-container);
   margin: 0 auto;
+  background: yellow;
 }
 
 /* CoolLoader */
