--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -7,8 +7,7 @@
   background-repeat: no-repeat;
 }
 /* Buttons */
-button.A_Button,
-a.A_Button {
+.A_Button {
   display: block;
   display: flex;
   width: fit-content;
@@ -18,19 +17,70 @@ a.A_Button {
   padding: var(--space-8) var(--space-24);
   background: linear-gradient(0deg, #151514 70.7%, #5d5d5c 110.42%);
   color: var(--white-500);
-  border-radius: 4px;
+  border-radius: 6px;
   border: 1px solid var(--gray-lightest);
   text-decoration: none;
   font-weight: 500;
+  font-family: 'Aeonik Pro';
+  font-size: 1rem;
 
   &.secondary {
-    background-color: transparent;
+    background: transparent;
     border: 2px solid var(--gray-base);
     color: var(--gray-base);
+    font-weight: 500;
+    font-size: 1rem;
   }
 
   &:hover {
     cursor: pointer;
+  }
+}
+
+.A_FilterDropdown {
+  gap: var(--space-2);
+  padding: 0px 8px 0px 12px;
+
+  &.active {
+    border-color: #000;
+    background: #f5f5f5;
+  }
+}
+
+.A_FilterDropdown,
+.A_FilterToggle {
+  display: flex;
+  align-items: center;
+  font-family: 'Aeonik Pro', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  height: 40px;
+  border-radius: 6px;
+  border: 1.5px solid var(--Colors-neutral-gray-lightest, #d4d4d4);
+  background: transparent;
+  cursor: pointer;
+  white-space: nowrap;
+
+  img {
+    width: 26px;
+    height: 26px;
+  }
+}
+
+/* Toggle кнопка */
+.A_FilterToggle {
+  padding: 8px 12px;
+
+  &.active {
+    background: var(--gray-base);
+    color: var(--white-500);
+  }
+
+  &.all-filters {
+    width: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -86,6 +136,7 @@ button.A_Tab {
   width: calc(33.95% - var(--grid-gap));
   border-radius: 2px;
   overflow: hidden;
+  transition: all 0.3s ease-in-out;
   /* position: relative; */
 
   a {
@@ -99,6 +150,10 @@ button.A_Tab {
     width: 100%;
     height: 100%;
     object-fit: contain;
+  }
+
+  &:hover {
+    transform: scale(1.01) rotate(0deg) translate(0px, 0px) skewX(0deg);
   }
 }
 /* PosterPage */
