--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -4,6 +4,7 @@
   align-items: flex-start;
   gap: var(--grid-gap);
   min-height: 100vh;
+  width: 100%;
 }
 .С_MetaDataPoster {
   display: flex;
@@ -59,4 +60,12 @@
     display: flex;
     align-items: center;
   }
+}
+.C_FilterModalConent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  gap: var(--space-20);
+  margin: 1rem 0;
 }
