--- a/src/stylesheets/Components/layouts.css
+++ b/src/stylesheets/Components/layouts.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(var(--grid-columns), 1fr);
   gap: var(--grid-gap);
   position: relative;
+  margin-bottom: 10rem;
 }
 .L_ArticlesPreviewSection {
   display: flex;
