--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -75,6 +75,7 @@
   display: grid;
   grid-template-columns: repeat(var(--grid-columns), 1fr);
   gap: var(--grid-gap);
+  align-items: end;
 
   h1 {
     grid-column: span 5;
@@ -82,6 +83,11 @@
 
   .A_CaptionText {
     grid-column: 10/13;
+
+    @media screen and (max-width: 1024px) {
+      grid-column: 6/10;
+      margin-top: auto;
+    }
   }
 }
 .M_FiltersTitle {
@@ -197,5 +203,43 @@
     &:hover {
       text-decoration: underline;
     }
+  }
+}
+.M_FilterModalHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--gray-lightest);
+  position: relative;
+  padding: 0.5rem clamp(1rem, 3vw, 4rem);
+
+  .drag-handle {
+    position: absolute;
+    top: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 40px;
+    height: 4px;
+    background: #e0e0e0;
+    border-radius: 2px;
+  }
+  .A_CloseButton {
+    background: none;
+    border: none;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    padding: 8px;
+  }
+}
+.M_FilterModalFooter {
+  display: flex;
+  flex-direction: row;
+  gap: var(--grid-gap);
+  padding: 1rem clamp(1rem, 3vw, 4rem);
+  border-top: 1px solid var(--gray-lightest);
+
+  .A_Button {
+    flex: 1;
   }
 }
