--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -169,3 +169,53 @@
   flex-direction: column;
   gap: var(--space-8);
 }
+
+/* .O_FilterModal__footer .btn-reset,
+.O_FilterModal__footer .btn-apply {
+  flex: 1;
+  padding: 14px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+} */
+
+.O_FilterSection {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
+
+  p.subtitle {
+    font-size: 1.125rem;
+  }
+
+  .C_Filters {
+    padding: 0;
+
+    .M_CheckBoxLabel {
+      height: 2.5rem;
+      gap: var(--space-4);
+
+      span {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      input {
+        width: 1rem;
+        height: 1rem;
+      }
+    }
+  }
+}
+
+.O_FilterModal {
+  width: 100%;
+  min-height: 50vh;
+  max-height: 80vh;
+  background: var(--white-500);
+  border-radius: 16px 16px 0 0;
+  display: flex;
+  flex-direction: column;
+}
