--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -93,7 +93,6 @@
   flex-direction: column;
   gap: var(--space-24);
   width: 100%;
-  max-width: var(--width-container);
   margin: calc(var(--header-offset) + var(--space-64)) auto;
 }
 
@@ -127,4 +126,10 @@
   gap: var(--space-8);
   width: 100%;
   margin: 0 auto;
+}
+.W_PostersWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-24);
 }
