gsap posers row

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,4 @@
 @import 'stylesheets/Components/layouts.css';
 /* Responsive */
 @import 'stylesheets/responsive.css';
+@import 'stylesheets/animations.css';
