--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -18,11 +18,11 @@
   background: linear-gradient(0deg, #151514 70.7%, #5d5d5c 110.42%);
   color: var(--white-500);
   border-radius: 6px;
-  border: 1px solid var(--gray-lightest);
   text-decoration: none;
   font-weight: 500;
   font-family: 'Aeonik Pro';
   font-size: 1rem;
+  transition: 0.3s all ease-in-out;
 
   &.secondary {
     background: transparent;
@@ -56,6 +56,7 @@
   font-size: 1rem;
   height: 40px;
   border-radius: 6px;
+  color: var(--gray-base);
   border: 1.5px solid var(--Colors-neutral-gray-lightest, #d4d4d4);
   background: transparent;
   cursor: pointer;
