--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -43,6 +43,11 @@
       grid-column: span 12;
     } */
   }
+  &.main {
+    .O_CardArticle {
+      grid-column: span 3;
+    }
+  }
 }
 .C_CollapsibleLists {
   display: flex;
@@ -63,11 +68,12 @@
     align-items: center;
   }
 }
-.C_FilterModalConent {
+.C_FilterModalContent {
   flex: 1;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   gap: var(--space-20);
-  margin: 1rem 0;
+  margin: 1rem 0 0;
+  padding: 0 clamp(1rem, 3vw, 4rem);
 }
