--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -3,19 +3,17 @@
   gap: var(--space-12);
 }
 .M_BigTextAbout {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(var(--grid-columns), 1fr);
   align-items: end;
-  justify-content: space-between;
-  gap: var(--space-20);
-  padding: var(--space-32) var(--container-padding);
+  gap: var(--grid-gap);
 
-  @media screen and (max-width: 1024px) {
-    flex-direction: column;
-    align-items: flex-start;
+  p {
+    grid-column: 1/3;
+  }
 
-    h2.right-container {
-      max-width: 100%;
-    }
+  h2 {
+    grid-column: 7/13;
   }
 }
 .M_HeadingPicture {
@@ -195,6 +193,7 @@
   height: 40px;
   color: var(--gray-soft);
   border-bottom: 1px solid var(--gray-lightest);
+  margin-bottom: 1rem;
 
   a {
     text-decoration: none;
@@ -212,9 +211,13 @@
   border-bottom: 1px solid var(--gray-lightest);
   position: relative;
   padding: 0.5rem clamp(1rem, 3vw, 4rem);
+  cursor: grab;
+  touch-action: none;
+  user-select: none;
 
   .drag-handle {
     position: absolute;
+    border: none;
     top: 8px;
     left: 50%;
     transform: translateX(-50%);
@@ -241,5 +244,19 @@
 
   .A_Button {
     flex: 1;
+  }
+}
+.M_NoContent {
+  display: flex;
+  width: 300px;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: calc(40vh - 12rem);
+  transform: translateX(-50%);
+
+  h3,
+  p {
+    white-space: nowrap;
   }
 }
