--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-40);
-  grid-column: 8/12;
+  grid-column: 7/11;
 
   @media screen and (max-width: 1240px) {
     grid-column: 7/12;
@@ -218,4 +218,19 @@
   border-radius: 16px 16px 0 0;
   display: flex;
   flex-direction: column;
+}
+
+.O_TitleSlider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  height: 490px;
+
+  .M_HeadingContainer {
+    width: 100%;
+    max-width: 620px;
+    align-items: center;
+    text-align: center;
+  }
 }
