--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -37,27 +37,20 @@
   padding: var(--space-16) var(--space-24);
 }
 .W_AboutCards {
-  padding: 0 var(--container-padding);
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(var(--grid-columns), 1fr);
   justify-content: space-between;
   width: 100%;
-  gap: var(--space-20);
+  gap: var(--grid-gap);
 
-  .O_AboutCard {
-    flex: 0.5;
-    max-width: 413px;
+  .O_AboutCard:first-child {
+    grid-column: span 4;
   }
-
-  .W_TwoCards {
-    flex: 1;
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    gap: var(--space-20);
-
-    .O_AboutCard {
-      flex: 1 100%;
-    }
+  .O_AboutCard:nth-child(2) {
+    grid-column: 7/10;
+  }
+  .O_AboutCard:nth-child(3) {
+    grid-column: 10/13;
   }
 
   @media screen and (max-width: 1024px) {
@@ -86,6 +79,7 @@
 
 .W_PostersWrap {
   grid-column: 4 / 13;
+  position: relative;
 }
 
 .W_PostersPage {
@@ -132,4 +126,10 @@
   flex-direction: column;
   align-items: center;
   gap: var(--space-24);
+}
+
+.W_HomePageWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
 }
