--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -77,3 +77,9 @@
   margin: 1rem 0 0;
   padding: 0 clamp(1rem, 3vw, 4rem);
 }
+.C_Modules {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: var(--grid-gap);
+  width: 100%;
+}
