--- a/src/stylesheets/animations.css
+++ b/src/stylesheets/animations.css
@@ -68,3 +68,82 @@
   font-size: 20px;
   margin: 20px 0;
 } */
+
+.marquee {
+  width: 100%;
+  /* height: 24vh; */
+  overflow: hidden;
+  position: relative;
+
+  li {
+    background: red;
+  }
+}
+
+/* .marquee::before,
+.marquee::after {
+  position: absolute;
+  border-right: 4px solid black;
+  top: 0;
+  width: 8rem;
+  height: 100%;
+  content: '';
+  z-index: 2;
+} */
+
+.marquee::before {
+  left: 0;
+  background: linear-gradient(to right, #111 0%, transparent 100%);
+}
+
+.marquee::after {
+  right: 0;
+  background: linear-gradient(to left, #111 0%, transparent 100%);
+}
+
+.marquee-content {
+  height: 100%;
+  display: flex;
+  gap: var(--space-8);
+}
+
+.marquee-content li {
+  width: 100px;
+  background: #fae;
+  border-radius: 50%;
+  min-width: 220px;
+  height: 100%;
+  flex-shrink: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  text-align: left;
+}
+
+.marquee-content i {
+  font-size: 4rem;
+}
+
+.marquee-content span {
+  font-size: 1rem;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+/* @media (max-width: 600px) {
+  .marquee {
+    height: 20vh;
+  }
+
+  .marquee-content li {
+    width: 40vw;
+  }
+
+  .marquee-content i {
+    font-size: 2.2rem;
+  }
+} */
