--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -132,3 +132,9 @@ header.S_Header {
     }
   }
 }
+.S_ManyPosters {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-40);
+  height: 100vh;
+}
