--- a/src/stylesheets/Components/wrappers.css
+++ b/src/stylesheets/Components/wrappers.css
@@ -133,3 +133,9 @@
   flex-direction: column;
   gap: 10rem;
 }
+.W_MarqueeContent {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  gap: var(--space-8);
+}
