--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -83,3 +83,24 @@
   gap: var(--grid-gap);
   width: 100%;
 }
+.C_PostersRow {
+  width: 100%;
+  background: #fae;
+
+  .W_RowPostersAnim {
+    display: flex;
+    flex-direction: row;
+    gap: var(--space-2);
+
+    .Q_PosterImage {
+      flex: 1;
+      height: 420px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
