--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -2,6 +2,14 @@
   display: flex;
   gap: var(--space-12);
 }
+
+.M_ParagraphButton {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-16);
+  align-items: center;
+}
+
 .M_BigTextAbout {
   display: grid;
   grid-template-columns: repeat(var(--grid-columns), 1fr);
@@ -259,4 +267,15 @@
   p {
     white-space: nowrap;
   }
+}
+.M_AboutArticle {
+  h4 {
+    font-size: 1.5rem;
+  }
+}
+.M_Marquee {
+  width: 100%;
+  /* height: 24vh; */
+  overflow: hidden;
+  position: relative;
 }
