--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -118,6 +118,7 @@
     }
   }
 }
+.O_ModuleCard,
 .O_CardArticle {
   width: 100%;
   text-decoration: none;
@@ -128,7 +129,7 @@
   .M_ArticleCardBio {
     display: flex;
     flex-direction: column;
-    gap: var(--space-12);
+    gap: var(--space-8);
     height: 140px;
 
     p.caption-caps {
@@ -152,6 +153,7 @@
     }
   }
 }
+
 .O_ChapterHead {
   display: flex;
   flex-direction: column;
@@ -246,23 +248,30 @@
   .M_HeadingContainer {
     width: 100%;
     max-width: 630px;
+    gap: var(--space-24);
   }
 }
 .O_ModuleCard {
   grid-column: span 1;
   display: flex;
   flex-direction: column;
-  background: #f3f3f1;
+  /* background: #f3f3f1; */
   width: 100%;
   border-radius: 6px;
   gap: var(--space-12);
-  padding: 1rem;
+  /* padding: 1rem; */
   text-align: left;
 
   .Q_ModuleCardCover {
-    width: 100;
+    width: 100%;
     aspect-ratio: 3 / 2;
-    background: navy;
     border-radius: 4px;
+    background: linear-gradient(
+      237deg,
+      rgba(122, 223, 241, 0.5) 10.16%,
+      #9eff70 31.92%,
+      #9eff70 47.95%,
+      rgba(122, 223, 241, 0.5) 92.68%
+    );
   }
 }
