--- a/src/stylesheets/fonts.css
+++ b/src/stylesheets/fonts.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'PT Root UI';
-  src: url('../fonts/PT-Root-UI_Light.woff2') format('woff2'),
+  src:
+    url('../fonts/PT-Root-UI_Light.woff2') format('woff2'),
     url('../fonts/PT-Root-UI_Light.woff') format('woff');
   font-weight: 100;
   font-style: normal;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url('../fonts/PT-Root-UI_Regular.woff2') format('woff2'),
+  src:
+    url('../fonts/PT-Root-UI_Regular.woff2') format('woff2'),
     url('../fonts/PT-Root-UI_Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
@@ -16,7 +18,8 @@
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url('../fonts/PT-Root-UI_Medium.woff2') format('woff2'),
+  src:
+    url('../fonts/PT-Root-UI_Medium.woff2') format('woff2'),
     url('../fonts/PT-Root-UI_Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -24,15 +27,33 @@
 
 @font-face {
   font-family: 'Aeonik Pro';
-  src: url('../fonts/AeonikPro-Regular.otf') format('otf'),
+  src:
+    url('../fonts/AeonikPro-Regular.otf') format('otf'),
     url('../fonts/AeonikPro-Regular.otf') format('otf');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Aeonik Pro';
-  src: url('../fonts/AeonikPro-Medium.otf') format('otf'),
+  src:
+    url('../fonts/AeonikPro-Medium.otf') format('otf'),
     url('../fonts/AeonikPro-Medium.otf') format('otf');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Aeonik Mono';
+  src:
+    url('../fonts/AeonikMono-Regular.otf') format('otf'),
+    url('../fonts/AeonikMono-Regular.otf') format('otf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Aeonik Mono';
+  src:
+    url('../fonts/AeonikMono-Medium.otf') format('otf'),
+    url('../fonts/AeonikMono-Medium.otf') format('otf');
   font-weight: 500;
   font-style: normal;
 }
