--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -279,3 +279,10 @@
   overflow: hidden;
   position: relative;
 }
+
+.M_ParagraphArticle {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-16);
+}
