--- a/src/stylesheets/Components/atoms.css
+++ b/src/stylesheets/Components/atoms.css
@@ -6,7 +6,64 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+.A_DVDLogo {
+  grid-column: span 5;
+  position: relative;
+  min-height: 200px;
+
+  .bouncing-logo {
+    position: absolute;
+    width: 140px;
+    height: 90px;
+  }
+  h1 {
+    line-height: 40px;
+  }
+}
+
 /* Buttons */
+
+.A_TelegramButton {
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 4px;
+  border: 1.5px solid var(--gray-medium);
+  color: var(--gray-medium);
+  text-decoration: none;
+  width: fit-content;
+  align-items: center;
+  font-size: 1.125rem;
+  font-weight: 500;
+  padding: 8px 12px;
+  gap: var(--space-4);
+
+  .Q_Telegram {
+    width: 24px;
+    height: 26px;
+    background-size: cover;
+    background-image: url('../../images/icons/telegramLogo.svg');
+  }
+}
+
+.A_CodeTab {
+  font-family: 'Aeonik Mono';
+  border-radius: 4px;
+  border: 1px solid var(--gray-lightest);
+  height: 2rem;
+  padding: var(--space-6) var(--space-12);
+  font-size: 14px;
+  background: transparent;
+}
+
+.A_CopyButton {
+  border: none;
+  background: transparent;
+  text-decoration: underline;
+  font-size: 1rem;
+}
+
 .A_Button {
   display: block;
   display: flex;
@@ -227,5 +284,19 @@ button.A_Tab {
   &:hover {
     text-decoration: underline;
     color: var(--gray-soft);
+  }
+}
+.A_PosterArticle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-4);
+
+  figcaption {
+    color: var(--gray-soft);
+  }
+
+  img {
+    border-radius: 2px;
   }
 }
