--- a/src/stylesheets/Components/layouts.css
+++ b/src/stylesheets/Components/layouts.css
@@ -18,6 +18,5 @@
   margin-top: var(--header-offset);
 }
 .L_ArticleBars {
-  margin-top: var(--header-offset) auto 0;
-  margin-top: var(--header-offset);
+  margin-top: var(--space-32);
 }
