--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -212,6 +212,12 @@
     }
   }
 }
+
+.M_CodeTabs {
+  display: flex;
+  gap: var(--space-4);
+}
+
 .M_FilterModalHeader {
   display: flex;
   align-items: center;
@@ -285,4 +291,19 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-16);
+}
+.M_TelegramAction {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-12);
+
+  h4 {
+    width: 80%;
+  }
+}
+.M_TwoLinks {
+  width: 100%;
+  flex-wrap: wrap;
+  gap: var(--space-12);
+  margin-bottom: var(--space-16);
 }
