--- a/src/stylesheets/Components/superorganisms.css
+++ b/src/stylesheets/Components/superorganisms.css
@@ -28,8 +28,9 @@
 
 .S_Footer {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  padding: var(--space-48) 0;
+  border-top: 1px solid var(--gray-lightest);
+  margin-top: 10rem;
 }
 
 header.S_Header {
@@ -96,7 +97,7 @@ header.S_Header {
   width: 100%;
   grid-column: span 3;
   position: sticky;
-  top: 100px;
+  top: 80px;
   align-self: start;
   /* height: calc(100vh - 10rem); */
   height: calc(100vh - 6.5rem);
@@ -137,4 +138,16 @@ header.S_Header {
   flex-direction: column;
   gap: var(--space-40);
   height: 100vh;
+}
+.S_ArticleHead {
+  margin-top: var(--header-offset);
+  background-color: white;
+  padding: var(--space-40) 0;
+  display: flex;
+  flex-direction: column;
+}
+.S_CodeArea {
+  border-radius: 4px;
+  border: 1px solid var(--gray-lightest);
+  background: white;
 }
