--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -324,5 +324,5 @@
   display: flex;
   flex-direction: row;
   gap: var(--space-12);
-  padding: var(--space-12);
+  padding: 0 var(--space-12) var(--space-12) var(--space-12);
 }
